static/styles/manhood.css
body {
  margin: 0;
  padding: 0;
  font-family: serif;
  font-size: 1.2em;
  line-height: 1.2;
  color: #222;
}

.logo {
	display: block;
	margin: 0 auto;
	height: 64px;
	width: 64px;
	background-image: url('/static/logox.svg');
	background-size: cover;
}

.container {
	margin: 60px;
}

.slogan {
	display: block;
	width: 38%;
	margin: 60px auto;
	font-family: 'Special Elite';
	text-align: center;
	font-size: 1.5em;
	line-height: 1.3;
}

.slogan .simple {
	font-style: italic;
}

.cta {
	display: block;
	margin: 60px auto;
	width: 20%;
	border: 1px solid #59ABE3;
	border-radius: 5px;
	font-family: 'Lato', sans-serif;
	font-size: 1.2em;
	padding: 10px;
	text-align: center;
	vertical-align: middle;
	color: #59ABE3;
	transition: background 0.4s, color 0.4s;
	cursor: pointer;
}

.cta:hover {
	background: #59ABE3;
	color: white;
}

.example {
	display: block;
	width: 33%;
	margin: 0 auto;
	text-align: center;
	font-size: .8em;
	font-style: italic;
	line-height: 1.6;
}

hr {
	background: white;
	color: white;
	width: 33%;
	border-top: 1px dashed #ddd;
}

